<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menuHome"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/menuAlbum"
        android:icon="@drawable/album"
        android:title="@string/album" />
    <item
        android:id="@+id/menuArtist"
        android:icon="@drawable/artist"
        android:title="@string/artist" />
    <item
        android:id="@+id/menuPlaylist"
        android:icon="@drawable/playlist"
        android:title="@string/playlist" />
    <item
        android:id="@+id/favoriteSong"
        android:icon="@drawable/lovesong"
        android:title="@string/favoriteSong" />
    <item
        android:title="@string/other">
        <menu>
            <item
                android:id="@+id/menuSetting"
                android:icon="@drawable/setting"
                android:title="@string/setting" />
            <item
                android:id="@+id/menuLogin"
                android:icon="@drawable/ic_baseline_login_24"
                android:title="@string/login" />
        </menu>
    </item>
</menu>